--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="shortcut icon" href="../src/logo.png" type="image/x-icon" />
     <meta name="theme-color" content="#000000" />
     <link
       rel="shortcut icon"
-      href="../src/asset/images/usa.svg"
+      href="../src/logo.png"
       type="image/x-icon"
     />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -32,5 +31,20 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
 
     <div id="root"></div>
+    <div id="timer"></div>
+    <script>
+     var countDownDate=new Date("Jun 14,2023 00:00:00").getTime();
+     var remainingTime=()=>{
+     var now= new Date().getTime();
+     var distance=countDownDate-now;
+
+     var day=Math.floor(distance/(1000*60*60*24));
+     var hour=Math.floor((distance % (1000*60*60*24))/(1000*60*60));
+     var minute=Math.floor((distance % (1000*60*60))/(1000*60));
+     var second=Math.floor((distance % (1000*60))/1000);
+
+     var result= document.getElementById('timer').innerHTML=day+" "+":"+" "+hour+" "+":"+" "+minute+" "+":"+" "+second;
+  }
+    </script>
   </body>
 </html>
