--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
 
     <div id="root"></div>
-    <div id="timer"></div>
+    <!-- <div id="timer"></div>
     <script>
      var countDownDate=new Date("Jun 14,2023 00:00:00").getTime();
      var remainingTime=()=>{
@@ -44,7 +44,7 @@
      var second=Math.floor((distance % (1000*60))/1000);
 
      var result= document.getElementById('timer').innerHTML=day+" "+":"+" "+hour+" "+":"+" "+minute+" "+":"+" "+second;
-  }
+  } -->
     </script>
   </body>
 </html>
